# SimFramework

./: .gitmodules  CMakeLists.txt  README.md
Binaries/Windows/AMD64/: Framework.lib
Framework/: Components.cpp  Components.h  Framework.cpp  Framework.h  Interpolation.cpp  Interpolation.h  Utilities.cpp  Utilities.h
Framework/include/SimFramework/: Components.h  Framework.h  Interpolation.h  Utilities.h
Models/: Clutch.cpp  MassSpringDamper1D.cpp  Vehicle.cpp
Models/include/Models/: Clutch.h  MassSpringDamper1D.h  Vehicle.h
Sandbox/: ReportResults.h  ReportResults_Aero.h  ReportResults_Gradient.h  ReportResults_Mass.h  ReportResults_RR.h  ReportResults_Ratios.h  ReportResults_TransmissionAndClutch.h  ReportResults_VehicleDynamics.h  SandboxEngine.h  SandboxFullModel.h  SandboxLockupClutch.h  SandboxMassSpringDamper.h  SandboxTransmission.h  SandboxVehicleStandalone.h  main.cpp
Sandbox/Data/: 2L_Turbo_Gasoline.json  road1.json
SimModels/: Engine.cpp  EngineStandalone.cpp  LockupClutch.cpp  MassSpringDamper1D.cpp  Powertrain.cpp  Road.cpp  Transmission.cpp  TransmissionStandalone.cpp  Vehicle.cpp  VehicleComponents.cpp  VehicleController.cpp  VehicleDynamics.cpp  VehicleDynamicsStandalone.cpp  Wheel.cpp
SimModels/include/SimModels/: Engine.h  EngineStandalone.h  LockupClutch.h  MassSpringDamper1D.h  Powertrain.h  Road.h  Transmission.h  TransmissionStandalone.h  Vehicle.h  VehicleComponents.h  VehicleController.h  VehicleDynamics.h  VehicleDynamicsStandalone.h  Wheel.h
Test/: test_Components.cpp  test_Framework.cpp  test_Integration.cpp  test_Interpolation.cpp  test_Vehicle.cpp
Vehicle/: Clutch.cpp  Clutch.h  Engine.cpp  Engine.h  Inertia1D.cpp  Inertia1D.h  Mass1D.cpp  Mass1D.h  OutputBlock.cpp  SpringDamper1D.cpp  SpringDamper1D.h  Vehicle.cpp  Vehicle.h
Vehicle/include/Vehicle/: Clutch.h  OutputBlock.h  SpringDamper1D.h  Vehicle.h
include/SimInterface/: SimInterface.h
sandbox/: Engine.cpp  Engine.h  Mass1D.cpp  Mass1D.h  OutputBlock.cpp  OutputBlock.h  SpringDamper1D.cpp  SpringDamper1D.h  TestUE4Link.cpp  TestUE4Link.h  main.cpp
src/: Block.cpp  Block.h  Components.cpp  Components.h  ConstantBlock.h  DynamicSystem.cpp  DynamicSystem.h  ForwardEuler.cpp  ForwardEuler.h  Framework.cpp  Framework.h  Interpolation.cpp  Interpolation.h  RK4.cpp  RK4.h  Signal.cpp  Signal.h  Sink.cpp  Sink.h  StateSpace.cpp  StateSpace.h  SummingJunction.h  SystemInterface.h  SystemManager.cpp  SystemManager.h  TimeManager.cpp  TimeManager.h  Utilities.cpp  Utilities.h  library.h
